[gd_scene load_steps=2 format=2]

[ext_resource path="res://lib/ext/particle_rain/ext_main.gd" type="Script" id=1]

[node name="ext_main" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -368.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox1" type="VBoxContainer" parent="."]
margin_right = 196.0
margin_bottom = 192.0

[node name="particle_type" type="OptionButton" parent="vbox1"]
margin_right = 196.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
focus_mode = 0
enabled_focus_mode = 0
text = "Disabled"
align = 1
items = [ "Disabled", null, false, 0, null, "Rain", null, false, 1, null, "Snow", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox1" type="HBoxContainer" parent="vbox1"]
margin_top = 36.0
margin_right = 196.0
margin_bottom = 68.0

[node name="lbl_size" type="Label" parent="vbox1/hbox1"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Size"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size" type="HSlider" parent="vbox1/hbox1"]
margin_left = 68.0
margin_right = 196.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
focus_mode = 0
min_value = 1.0
value = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox2" type="HBoxContainer" parent="vbox1"]
margin_top = 72.0
margin_right = 196.0
margin_bottom = 104.0

[node name="lbl_amount" type="Label" parent="vbox1/hbox2"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Amount"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount" type="HSlider" parent="vbox1/hbox2"]
margin_left = 68.0
margin_right = 196.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
focus_mode = 0
min_value = 8.0
max_value = 32768.0
value = 2048.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox3" type="HBoxContainer" parent="vbox1"]
margin_top = 108.0
margin_right = 196.0
margin_bottom = 140.0

[node name="lbl_initial_velocity" type="Label" parent="vbox1/hbox3"]
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
text = "Speed"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initial_velocity" type="HSlider" parent="vbox1/hbox3"]
margin_left = 68.0
margin_right = 196.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
focus_mode = 0
max_value = 200.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 200.0
margin_right = 232.0
margin_bottom = 192.0
rect_min_size = Vector2( 32, 0 )

[node name="vbox2" type="VBoxContainer" parent="."]
margin_left = 236.0
margin_right = 464.0
margin_bottom = 192.0

[node name="fog_enable" type="CheckBox" parent="vbox2"]
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
focus_mode = 0
enabled_focus_mode = 0
text = "Fog Enables"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox1" type="HBoxContainer" parent="vbox2"]
margin_top = 36.0
margin_right = 228.0
margin_bottom = 68.0

[node name="lbl_fog_amount" type="Label" parent="vbox2/hbox1"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
text = "Fog Amount"
valign = 1

[node name="amount" type="HSlider" parent="vbox2/hbox1"]
margin_left = 100.0
margin_right = 228.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
focus_mode = 0
max_value = 1024.0
value = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox2" type="HBoxContainer" parent="vbox2"]
margin_top = 72.0
margin_right = 228.0
margin_bottom = 104.0

[node name="lbl_fog_color" type="Label" parent="vbox2/hbox2"]
margin_right = 96.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 32 )
text = "Fog Color"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fog_color" type="ColorPickerButton" parent="vbox2/hbox2"]
margin_left = 100.0
margin_right = 132.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
focus_mode = 0
enabled_focus_mode = 0
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
